--- a/flapper-news/views/index.ejs
+++ b/flapper-news/views/index.ejs
@@ -17,19 +17,17 @@
       <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
     </ul>
   </nav>
-    <div class="row">
+  <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <ui-view></ui-view>
     </div>
   </div>
-
   <script type="text/ng-template" id="/home.html">
     <div class="page-header">
       <h1>Flapper News</h1>
     </div>
-      <div ng-repeat="post in posts | orderBy:'-upvotes'">
-        <span class="glyphicon glyphicon-thumbs-up"
-          ng-click="incrementUpvotes(post)"></span>
+    <div ng-repeat="post in posts | orderBy:'-upvotes'">
+        <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(post)"></span>
         {{post.upvotes}}
         <span style="font-size:20px; margin-left:10px;">
           <a ng-show="post.link" href="{{post.link}}">
@@ -45,7 +43,7 @@
         <span>
           <a href="#/posts/{{post._id}}">Comments</a>
         </span>
-      </div>
+    </div>
 
       <form ng-submit="addPost()"
       ng-show="isLoggedIn()"
