--- a/flapper-news/views/index.ejs
+++ b/flapper-news/views/index.ejs
@@ -6,6 +6,7 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
   <script src="/javascripts/angularApp.js"></script>
   <style> .glyphicon-thumbs-up { cursor:pointer } </style>
+  <style> .glyphicon-thumbs-down { cursor:pointer } </style>
 </head>
 
 <body ng-app="flapperNews">
@@ -28,6 +29,7 @@
     </div>
     <div ng-repeat="post in posts | orderBy:'-upvotes'">
         <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(post)"></span>
+        <span class="glyphicon glyphicon-thumbs-down" ng-click="decrementUpvotes(post)"></span>
         {{post.upvotes}}
         <span style="font-size:20px; margin-left:10px;">
           <a ng-show="post.link" href="{{post.link}}">
@@ -84,6 +86,8 @@
   <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
     <span class="glyphicon glyphicon-thumbs-up"
       ng-click="incrementUpvotes(comment)"></span>
+      <span class="glyphicon glyphicon-thumbs-down"
+        ng-click="decrementUpvotes(comment)"></span>
     {{comment.upvotes}} - by {{comment.author}}
     <span style="font-size:20px; margin-left:10px;">
       {{comment.body}}
@@ -100,8 +104,8 @@
     class="form-control"
     placeholder="Comment"
     ng-model="body"></input>
-    <button type="submit" class="btn btn-primary">Post</button>
   </div>
+  <button type="submit" class="btn btn-primary">Post</button>
 </form>
   <div ng-hide="isLoggedIn()">
   <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can comment.</h3>
