--- a/flapper-news/views/index.ejs
+++ b/flapper-news/views/index.ejs
@@ -4,6 +4,9 @@
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
+  <link rel="stylesheet" href="css/animate.css">
+  <script src="/javascripts/wow.min.js"></script>
+  <script> new WOW().init(); </script>
   <script src="/javascripts/angularApp.js"></script>
   <style> .glyphicon-thumbs-up { cursor:pointer } </style>
   <style> .glyphicon-thumbs-down { cursor:pointer } </style>
@@ -95,6 +98,9 @@
     </span>
   </div>
 
+  <div ng-show="error" class="alert alert-danger row WOW fadeOut data-wow-duration="5s"">
+    <span>{{ error.message }}</span>
+  </div>
   <form ng-submit="addComment()"
   ng-show="isLoggedIn()"
   style="margin-top:30px;">
