--- a/flapper-news/views/index.ejs
+++ b/flapper-news/views/index.ejs
@@ -4,7 +4,7 @@
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
-  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="/stylesheets/animate.css">
   <script src="/javascripts/wow.min.js"></script>
   <script> new WOW().init(); </script>
   <script src="/javascripts/angularApp.js"></script>
@@ -43,7 +43,7 @@
             {{post.title}}
           </span>
           <span ng-show="post.author">
-            posted by <a>{{post.author}}</a> |
+            posted by <a>{{post.author}}</a>
           </span>
           </span>
         <span>
@@ -70,6 +70,9 @@
         </div>
         <button type="submit" class="btn btn-primary">Post</button>
       </form>
+      <div ng-show="error" class="alert alert-danger row">
+        <span>{{ error.message }}</span>
+      </div>
         <div ng-hide="isLoggedIn()">
         <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can add a post.</h3>
       </div>
@@ -98,9 +101,7 @@
     </span>
   </div>
 
-  <div ng-show="error" class="alert alert-danger row WOW fadeOut data-wow-duration="5s"">
-    <span>{{ error.message }}</span>
-  </div>
+
   <form ng-submit="addComment()"
   ng-show="isLoggedIn()"
   style="margin-top:30px;">
@@ -114,6 +115,9 @@
   </div>
   <button type="submit" class="btn btn-primary">Post</button>
 </form>
+<div ng-show="error" class="alert alert-danger row WOW fadeInRight data-wow-delay="5s" fadeOut">
+  <span>{{ error.message }}</span>
+</div>
   <div ng-hide="isLoggedIn()">
   <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can comment.</h3>
   </div>
