--- a/flapper-news/views/index.ejs
+++ b/flapper-news/views/index.ejs
@@ -5,6 +5,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
   <link rel="stylesheet" href="/stylesheets/animate.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <script src="/javascripts/wow.min.js"></script>
   <script> new WOW().init(); </script>
   <script src="/javascripts/angularApp.js"></script>
@@ -14,22 +15,36 @@
 </head>
 
 <body ng-app="flapperNews" class="jumbotron">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-      <span class="sr-only">Toggle navigation</span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbar-collapse-1">
-      <nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
-    <ul class="nav navbar-nav">
-      <li><a href="/#/home"> Home</a></li>
-      <li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
-      <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
-      <li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
-      <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
-    </ul>
-  </nav>
-  </div>
-</div>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container" ng-click="isCollapsed = !isCollapsed">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" ng-init="isCollapsed = true" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand">Flapper News</a>
+        </div>
+        <div class="navbar-collapse" ng-class="{collapse: isCollapsed}" aria-expanded="false" style="height: 1px;">
+          <nav ng-controller="NavCtrl">
+          <ul class="nav navbar-nav">
+            <li><a href="/#/home"> Home</a></li>
+            <li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
+            <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
+            <li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
+            <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
+          </ul>
+        </nav>
+        </div>
+      </div>
+    </nav>
+
+
+
+
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <ui-view></ui-view>
